Fix vercel.json configuration

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,9 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/cron-post.py",
-      "use": "@vercel/python"
-    }
-  ],
   "functions": {
     "api/cron-post.py": {
-      "maxDuration": 300
+      "maxDuration": 60,
+      "runtime": "python3.9"
     }
   },
   "crons": [
