Add multi-platform posting: Instagram Reels + YouTube Shorts
Features:
- YouTube Shorts integration with OAuth2
- Static video Reels (7s, 1080x1920)
- Transparent overlays with forexyy.com logo
- AI captions via Groq API
- Lightweight MongoDB tracking
- Independent platform posting
- Rate limit handling
- Production deployment ready

12 files changed with complete multi-platform support

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,16 @@ REACT_APP_INSTAGRAM_BUSINESS_ACCOUNT_ID=17841474412696876
 
 # MongoDB Configuration
 MONGODB_URI=mongodb+srv://aj:aj@qpost.lk5htbl.mongodb.net/?retryWrites=true&w=majority&appName=qpost
+
+# YouTube Configuration
+# Note: youtube_credentials.json file required for OAuth2 authentication
+# Download from Google Cloud Console → APIs & Services → Credentials
+YOUTUBE_API_KEY=AIzaSyBO1mrYoksmwSJFgOFtSc16b00yWi8cIwk
+
+# Feature Flags
+USE_INSTAGRAM_REELS=true
+USE_YOUTUBE_SHORTS=true
+USE_BACKGROUND_AUDIO=false
+
+# Posting Schedule
+POST_INTERVAL_MINUTES=15
