--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ python-dotenv>=1.0.0
 pymongo>=4.6.0
 Pillow>=10.0.0
 groq>=0.4.0
+moviepy>=1.0.3
+numpy>=1.24.0
+google-auth>=2.23.0
+google-auth-oauthlib>=1.1.0
+google-auth-httplib2>=0.1.1
+google-api-python-client>=2.100.0
