Fix video creation on Render by adding ffmpeg dependency
- Added Aptfile with ffmpeg for system-level installation
- Updated render.yaml build command to install ffmpeg
- Created comprehensive troubleshooting documentation
- This enables MoviePy to create videos for YouTube Shorts
- Instagram already working (just rate limited temporarily)

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,9 @@ services:
     env: python
     region: oregon
     plan: free
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      apt-get update && apt-get install -y ffmpeg
+      pip install -r requirements.txt
     startCommand: python scheduled_poster.py
     envVars:
       - key: PYTHON_VERSION
