Set keep-alive workflows to 10 minutes

--- a/.github/workflows/keep-render-awake.yml
+++ b/.github/workflows/keep-render-awake.yml
@@ -2,8 +2,8 @@ name: Keep Render Service Awake
 
 on:
   schedule:
-    # Run every 30 minutes
-    - cron: '*/30 * * * *'
+    # Run every 10 minutes to keep Render free tier from sleeping
+    - cron: '*/10 * * * *'
   workflow_dispatch: # Allow manual trigger
 
 jobs:
@@ -23,4 +23,4 @@ jobs:
       - name: Log Status
         run: |
           echo "✅ Render service pinged successfully"
-          echo "Next ping in 30 minutes"
+          echo "Next ping in 10 minutes"
